--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "moment": "^2.24.0",
     "next": "^9.3.0",
     "normalize.css": "^8.0.1",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
     "react-icons": "^3.9.0",
+    "react-moment": "^0.9.7",
     "styled-components": "^5.0.1"
   }
 }
