--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "moment": "^2.24.0",
-    "next": "^9.3.0",
+    "next": "^9.3.4",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
+    "react-countup": "^4.3.3",
     "react-dom": "^16.13.0",
     "react-icons": "^3.9.0",
     "react-moment": "^0.9.7",
