--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^16.13.0",
     "react-icons": "^3.9.0",
     "react-moment": "^0.9.7",
+    "react-scroll-to-bottom": "^1.3.2",
     "styled-components": "^5.0.1"
   }
 }
